--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1639,6 +1639,7 @@
     not_anime_ids:
     - 2920
     - 2922
+    - 37703
   threshold: 99.3%
   metadata: &173
     title_ru: Завтрашний Джо
@@ -4121,6 +4122,26 @@
     image: "/assets/achievements/anime/franchise/haou_daikei_ryuu_knight.jpg"
     topic_id: 247360
 - neko_id: haou_daikei_ryuu_knight
+  level: 0
+  algo: duration
+  filters: *443
+  threshold: 0.01
+  metadata: *444
+- neko_id: harukanaru_toki_no_naka_de
+  level: 1
+  algo: duration
+  filters: &443
+    franchise: harukanaru_toki_no_naka_de
+    not_anime_ids:
+    - 30145
+    - 4190
+  threshold: 100%
+  metadata: &444
+    title_ru: В далёкие времена
+    title_en: Harukanaru Toki no Naka de
+    image: https://dere.shikimori.org/system/user_images/original/34807/948674.jpg
+    topic_id: 247360
+- neko_id: harukanaru_toki_no_naka_de
   level: 0
   algo: duration
   filters: *443
