--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -2344,7 +2344,6 @@
   filters: &250
     franchise: detective_conan
     not_anime_ids:
-    - 1365
     - 6115
     - 9786
     - 10766
@@ -4476,3 +4475,15 @@
   filters: *477
   threshold: 0.01
   metadata: *478
+- neko_id: doupo_cangqiong
+  level: 1
+  algo: duration
+  filters: &477
+    franchise: doupo_cangqiong
+  threshold: 100%
+  metadata: &478
+    title_ru: Расколотая битвой синева небес
+    title_en: Doupo Cangqiong
+    image: https://desu.shikimori.org/system/user_images/original/45319/1081893.jpg
+    topic_id: 247360
+- neko_id: doupo_cangqiong
