--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -4505,9 +4505,9 @@
     franchise: huyao_xiao_hongniang
   threshold: 100%
   metadata:
-    title_ru: Сводники духов: Лисьи свахи
+    title_ru: "Сводники духов: Лисьи свахи"
     title_en: Huyao Xiao Hongniang
-    image: https://moe.shikimori.org/system/user_images/original/34807/1089592.jpg
+    image: https://moe.shikimori.one/system/user_images/original/34807/1089592.jpg
     topic_id: 247360
 - neko_id: hitori_no_shita
   level: 1
@@ -4518,7 +4518,7 @@
     - 37090
   threshold: 100%
   metadata:
-    title_ru: Один из отвергнутых: Изгой
-    title_en: Hitori no Shita: The Outcast
+    title_ru: "Один из отвергнутых: Изгой"
+    title_en: "Hitori no Shita: The Outcast"
     image: https://dere.shikimori.one/system/user_images/original/45319/1089699.jpg
     topic_id: 247360
