--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -411,7 +411,7 @@
     - 12121
   threshold: 96.8%
   metadata: &40
-    title_ru: Сказка о Хвосте феи
+    title_ru: Хвост Феи
     title_en: Fairy Tail
     image: "/assets/achievements/anime/franchise/fairy_tail.jpg"
     topic_id: 247360
@@ -428,7 +428,7 @@
     franchise: bungou_stray_dogs
   threshold: 100%
   metadata: &42
-    title_ru: Проза бродячих псов
+    title_ru: Великий из бродячих псов
     title_en: Bungou Stray Dogs
     image: "/assets/achievements/anime/franchise/bungou_stray_dogs.jpg"
     topic_id: 247360
