--- a/priv/rules/oldfag.yml
+++ b/priv/rules/oldfag.yml
@@ -36,5 +36,5 @@
   metadata:
     title_ru: Часть минувшей эпохи
     text_ru: Живая легенда. Носишь шляпу кота Перро и здоровался с Осаму Тедзукой.
-    image: https://a.radikal.ru/a42/2009/9b/b1137d7c2f36.gif
+    image: /assets/achievements/anime/oldfag_4.gif
     border_color: "#a5a5a5"
