--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -4634,3 +4634,14 @@
   filters: *491
   threshold: 0.01
   metadata: *492
+- neko_id: ling_yu
+  level: 1
+  algo: duration
+  filters: &491
+    franchise: ling_yu
+  threshold: 100%
+  metadata: 
+    title_ru: Край основателей
+    title_en: Ling Yu
+    image: https://desu.shikimori.one/system/user_images/original/34807/1206243.jpg
+    topic_id: 247360
