download images and generate 0 levels

--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -4637,51 +4637,75 @@
 - neko_id: ling_yu
   level: 1
   algo: duration
-  filters: &491
+  filters: &493
     franchise: ling_yu
   threshold: 100%
-  metadata: 
+  metadata: &494
     title_ru: Край основателей
     title_en: Ling Yu
-    image: https://desu.shikimori.one/system/user_images/original/34807/1206243.jpg
+    image: "/assets/achievements/anime/franchise/ling_yu.jpg"
     topic_id: 247360
+- neko_id: ling_yu
+  level: 0
+  algo: duration
+  filters: *493
+  threshold: 0.01
+  metadata: *494
 - neko_id: yahari_ore_no_seishun_love_comedy_wa_machigatteiru
   level: 1
   algo: duration
-  filters: 
+  filters: &495
     franchise: yahari_ore_no_seishun_love_comedy_wa_machigatteiru
   threshold: 100%
-  metadata: 
+  metadata: &496
     title_ru: Как и ожидалось, моя школьная романтическая жизнь не удалась
     title_en: Oregairu
-    image: https://nyaa.shikimori.one/system/user_images/original/667404/1217735.jpg
+    image: "/assets/achievements/anime/franchise/yahari_ore_no_seishun_love_comedy_wa_machigatteiru.jpg"
     topic_id: 247360
+- neko_id: yahari_ore_no_seishun_love_comedy_wa_machigatteiru
+  level: 0
+  algo: duration
+  filters: *495
+  threshold: 0.01
+  metadata: *496
 - neko_id: re_zero
   level: 1
   algo: duration
-  filters: 
+  filters: &497
     franchise: re_zero
     not_anime_ids:
-    - 38389
-    - 42364
-    - 41590
-    - 39921
-    - 33569
     - 33142
+    - 33569
+    - 38389
+    - 39921
+    - 41590
+    - 42364
   threshold: 100%
-  metadata: 
+  metadata: &498
     title_ru: Re:Zero. Жизнь с нуля в альтернативном мире
     title_en: Re:Zero kara Hajimeru Isekai Seikatsu
-    image: https://moe.shikimori.one/system/user_images/original/667404/1217737.jpg
+    image: "/assets/achievements/anime/franchise/re_zero.jpg"
     topic_id: 247360
+- neko_id: re_zero
+  level: 0
+  algo: duration
+  filters: *497
+  threshold: 0.01
+  metadata: *498
 - neko_id: yao_shen_ji
   level: 1
   algo: duration
-  filters: 
+  filters: &499
     franchise: yao_shen_ji
   threshold: 100%
-  metadata: 
+  metadata: &500
     title_ru: Сказания о демонах и богах
-    title_en: Yao Shen Ji 
-    image: https://moe.shikimori.org/system/user_images/original/45319/1201357.jpg
+    title_en: Yao Shen Ji
+    image: "/assets/achievements/anime/franchise/yao_shen_ji.jpg"
     topic_id: 247360
+- neko_id: yao_shen_ji
+  level: 0
+  algo: duration
+  filters: *499
+  threshold: 0.01
+  metadata: *500
